frontend bugs fixed